--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	</head>
 	<body>
-		
+		<div id="carousel">
+			<ul>
+				<li><img src="https://images.pexels.com/photos/13880/86e38cf98c5e3561fd2d7c811434b386.jpg?w=940&h=650&auto=compress&cs=tinysrgb" alt="pocket flowers"/>
+				</li>
+				<li><img src="https://images.pexels.com/photos/395132/pexels-photo-395132.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="working place"/></li>
+				<li><img src="https://images.pexels.com/photos/273238/pexels-photo-273238.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt ="plants for office"/></li>
+				<li><img src="https://images.pexels.com/photos/305556/pexels-photo-305556.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="small desk plants"/></li>
+				<li><img src="https://images.pexels.com/photos/380768/pexels-photo-380768.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="office plants"/></li>
+			</ul>
+		</div>
 	<script type="text/javascript" src="jq.js"></script>
 	</body>
 </html>
