function animate fixed

--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
 		<meta charset="UTF-8">
 		<title>JQ</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	</head>
 	<body>
 		<div id="carousel">
 			<ul>
+				<div class="icon left" id="left">
+					<i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
+				</div>
 				<li><img src="https://images.pexels.com/photos/13880/86e38cf98c5e3561fd2d7c811434b386.jpg?w=940&h=650&auto=compress&cs=tinysrgb" alt="pocket flowers"/>
 				</li>
 				<li><img src="https://images.pexels.com/photos/395132/pexels-photo-395132.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="working place"/></li>
 				<li><img src="https://images.pexels.com/photos/273238/pexels-photo-273238.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt ="plants for office"/></li>
 				<li><img src="https://images.pexels.com/photos/305556/pexels-photo-305556.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="small desk plants"/></li>
 				<li><img src="https://images.pexels.com/photos/380768/pexels-photo-380768.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="office plants"/></li>
+				<div class="icon right" id="right">
+					<i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+				</div>
 			</ul>
 		</div>
 	<script type="text/javascript" src="jq.js"></script>
